@@ -26,7 +26,6 @@ ad25d91958b7212abdc12b9611cfb4dc4e5cddb6d1e9891532f48aacee422b82  libxml2-2.9.0.
 a2848f34fcd5d6cf47def00461fcb528a0484d8edef8208d6d2e2909dc61d9cd  bzip2-1.0.6.tar.gz
 c3d8f831b8d127905f8e7f066ff5398668fa26f6a180945b32a5641c03c42925  glib-2.16.6.tar.bz2
 726457e11cb153adc3f428aaf1901fc561a374c30e5e7da6742c0742a338663c  Python-2.7.3.tar.bz2
-a80469935297430941d9ea01677fd3bcc7bf2ebf31a1a4dcf1c0d81129ed36f6  crmsh-1.2.4.tar.bz2
 b5cefce0a3cb49f8dca4d00e9480c0d9b45b75863bd44764156e322ee214e794  libaio-0.3.109.tar.bz2
 79240761918ef6215a909efb72c7b51e3bfc83227544c2e368e7e15f4d6fa69c  glue-1.0.11.tar.bz2
 79a696070a058c233c72dd6ac697021cc64abd5ed51e59db867d66d196a89381  readline-6.2.tar.gz
@@ -50,7 +49,6 @@ c4ba9aceda6b3fd2335e8579ee653a3d94735e143de498e61f4168c413de809a  fio-2.0.13.tar
 360f79bfb2bc19cf1dd221effc0afa63e710aaefb4eeb91f67d604a5ed117856  open-lldp-0.9.45.tar.gz
 27ab68f645691a4ca258dcc9d131040586e134f9233ce079794496f6264da084  libpciaccess-0.13.1.tar.bz2
 eb13ff01dae5618ead2ef6f92ba879e9e0390f9583bd545d8789d27cf39b6882  busybox-1.20.2.tar.bz2
-f913029ad1dbe3e9c4a90f505be6cfea60ef2509556204ae3b3217350e82b0a2  dlm-4.0.1.tar.bz2
 549b2da65c30905248aee07367a9cae3dd94bceaddd9c122d55075766c868733  ipmitool-1.8.12.tar.bz2
 6169b8e91d29288e90404f01462b69e7f2afb1161aa419826fe4736c7f9eb773  sysklogd-1.5.tar.gz
 9fe8287c647afeafb4149c5dedaeacfd20971ed7c26c7553794bb750536b5f57  less-451.tar.gz
@@ -72,7 +70,6 @@ c6aaa0b427e775a0fd5a956a75ae41e5110f22760723d9bda316100010e891ca  expat-1.95.8.t
 bc62821ec7755a75bcff905538558d29e0eb030965a5543e7ecaa07916460a4d  boost-1_55_0.tar.xz
 e72038b4769baad3aeae120ae8f47813891c8bf3f716808a32597770b7f37902  linux_firmware-20131226.tar.xz
 b4a2a0a4f70c22611ca35aa8b9699420872803cba5af28ae3ca57dd90b60c6c6  librdmacm-1.0.15.tar.gz
-7b204f4746baf79139a83239dd8dfafac745ebba6059e42f542729f3e4c39506  corosync-2.3.3.tar.gz
 3bfd1b4c5b99314585709c092096234b6e181741729f601d18d0ed7f0612612a  sysstat-10.2.1.tar.gz
 b31131b721fa26378b4af61b1c49986ff40fe590bc210545b210b6b774337858  pciutils-3.2.1.tar.gz
 de3feec52572df1693130d304028b1ad6469d97d4f49bde32b10402d5f1de206  tar-1.27.tar.gz
@@ -89,7 +86,6 @@ e6af71a06bc2534541b07743e1d58dc3caf744f38205ca3e5b5a0bdf372ed6f0  valgrind-3.9.0
 e728ed296fe9f069a0e005003c3d6b2dde3d9cad453422a10d6558616d304cc8  popt-1.16.tar.gz
 d34acaa353b525f77e1c9561c683e3cf7695e09eeeba611220558193db486c33  sg3_utils-1.37.tar.gz
 be27af5c21352f53e010342bf1c68e0b9e18232dbf3adec7e2f9b41f6bbe397d  elfutils-0.158.tar.bz2
-301b793d016ac9cea491de9a5fa20f9a5b207e0b79fdf1e275e8df30c8eaf738  pacemaker-1.1.11.tar.gz
 53cb818c3b90e507a8348f4f5eaedb05d8bfe5358aabb508b7263cc670c3e028  openssl-1.0.1g.tar.gz
 46f3a9409834f6ebeabdda4f98b97ffd94c01f6a9e2009c0341d90e6beb204cd  libusb_compat-0.1.4.tar.bz2
 f3367133781ea78737b731a6c2499f97bf8eb18dcb0f3457df9ac1139d386f4c  win_binaries-20140704.tar.xz
@@ -132,3 +128,7 @@ fe6a9ad775a5b2ae578c192f17c1981755647ff69ec6bc952e983994572c0c02  zfs-0.6.4.tar.
 74db8aaf13cc392edfb821291783ecd64d815e6f81409f57e290d3017750db29  eudev-3.0.tar.gz
 767112a204407e62dbc3106647cf839ed544f3cf5d0f0523aaa2508623aad63e  gperf-3.0.4.tar.gz
 cf80b7e3d9011600d888cf19cfc0d124960e490ba87faa62705e62acbaac0b8c  util-linux-2.26.1.tar.gz
+b89bc557aaffbab0ac005398025f247718a5589cff6574d902eaffe2b20e683e  dlm-4.0.2.tar.xz
+3dae93fb1cf5c560295253b0560cbc25421ed053ee373852864f3a60c03247d4  corosync-2.3.4.tar.gz
+fd2cedb42864c27d3bfcde6b8ffa2008b9411cb49c7ec5fabda9aab8a3e784df  pacemaker-1.1.12.tar.gz
+178b3179039ff5f3b5e7cf279ccfcdca14b55a3c5ce79f12063da68852d52a44  crmsh-2.1.0.tar.gz
